--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": ""
+    "test": "",
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
