adding ssl and environment var

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ DATABASE_URL="postgres://postgres:CmoodY98!59@localhost:5432/tasks"
 PORT=8070
 JWT_SECRET=binkolostonks726
 PASS=CmoodY98!59
+ENVIRONMENT=development
